Fix alignment of stat block

--- a/src/modules/better-item-view/styles.css
+++ b/src/modules/better-item-view/styles.css
@@ -120,7 +120,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .itemViewContainer .itemViewStatBlock-stat-value {
